# rpg-mcp-server

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  repos.py  repository.py  repository_db_example.py  repository_json.py  resources.py  server.py  utils.py
src/tools/: __init__.py  bestiary.py  campaign.py  combat.py  inventory.py  npc.py  readers.py
